# resume-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: ats-analyzer.md  content-analyst.md  interview-researcher.md  keyword-optimizer.md  resume-parser.md  resume-rewriter.md  skills-research.md  strategy-advisor.md
commands/: analyze-resume.md  ats-check.md  content-review.md  export-pdf.md  keyword-align.md  optimize-resume.md  parse-resume.md  skills-research.md  strategy-review.md
fonts/: LICENSE
hooks/: hooks.json  setup-deps.sh  validate-output.sh
internal/reports/: cowork-exports-2026-03-14.md  workspace-restructure-2026-04-10.md
reference/: resume-conventions-by-country.md
schemas/: ats-analysis.schema.json  change-manifest.schema.json  content-analysis.schema.json  interview-findings.schema.json  keyword-analysis.schema.json  parsed-resume.schema.json  scores-summary.schema.json  skills-research.schema.json  strategy-analysis.schema.json
scripts/: build-word-templates.py  compute-scores.py  env_config.py  export_edge_cases.py  extract-pdf-text.py  md-to-docx.py  md-to-pdf.py  md_to_pdf_fallback.py  md_to_pdf_router.py  parse_resume.py  run-python.sh  validate-output.py  validate_docx.py  validate_pdf.py
skills/analyze-resume/: SKILL.md  scoring-rubric.json
skills/ats-check/: SKILL.md
specs/: cowork-exports-SPEC.md
tests/: test_export_edge_cases.py  test_md_to_docx.py  test_md_to_pdf_fallback.py  test_md_to_pdf_router.py  test_parse_resume.py  test_validate_docx.py  test_validate_pdf.py
(+47 files in other folders)
